Implementation of alternative Grid UI.

--- a/data/fi.taimila.Stocks.appdata.xml.in
+++ b/data/fi.taimila.Stocks.appdata.xml.in
@@ -4,6 +4,6 @@
 	<metadata_license>GPL-3.0-or-later</metadata_license>
 	<project_license>GPL-3.0-or-later</project_license>
 	<description>
-	  <p>Simple app for following the stock market at a glance. Meant for casual usage, not for trading.</p>
+	  <p>Simple app for following the stock market at a glance. Designed for casual usage, not for trading.</p>
 	</description>
 </component>
